<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="menza">Menza</string>
    <string name="close">Close</string>
    <string name="vote">Vote!</string>
    <string name="submit">Submit</string>
</resources>
