<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbarRegister"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:background="@color/colorPrimary"
            android:id="@+id/button_backRegister"/>
    </Toolbar>


    <TextView
        android:id="@+id/textView_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="@dimen/testSize50"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegister" />

    <EditText
        android:id="@+id/editText_usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        app:layout_constraintTop_toBottomOf="@id/editText_emailRegister"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"/>

    <EditText
        android:id="@+id/editText_emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginTop="@dimen/margin100"
        android:layout_marginRight="@dimen/margin10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/textView_Register" />


    <EditText
        android:id="@+id/editText_passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginRight="@dimen/margin10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editText_usernameRegister" />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_passwordRegister" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
</android.support.constraint.ConstraintLayout>

